--- a/fds-frontend/package.json
+++ b/fds-frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -p ./tsconfig.app.json && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --port 3000",
     "test": "vitest",
     "e2e": "playwright test"
   },
